--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,18 +12,20 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
+    "jquery": "^3.7.0",
     "otp-input-react": "^0.3.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "react-otp-input": "^3.0.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "react-webcam": "^7.0.1",
+    "react-webcam": "^7.1.0",
     "tailwindcss": "^3.3.1",
+    "vivus": "^0.4.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
